# rank-predictor

./: CMakeLists.txt  README.md  classification.md
src/: classify.hpp  main.cpp  main1.cpp  main2.cpp  rank_predictor.cpp  rank_predictor.hpp  score.cpp  score.hpp
src/rank_predictor/: common.cpp  common.hpp  dp.cpp  dp.hpp  mc.cpp  mc.hpp
src/rank_predictor/detail/: classify.cpp  score.cpp  score.hpp
